--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.3.3
-requests==2.31.0
-beautifulsoup4==4.12.2
 gunicorn==21.2.0
+Flask-Limiter==2.9.0
+cryptography==41.0.3
+python-dotenv==1.1.0
